test_suite/tests/ui/duplicate-attribute/with-and-serialize-with.stderr
error: duplicate serde attribute `serialize_with`
 --> $DIR/with-and-serialize-with.rs:4:10
  |
4 | #[derive(Serialize)]
  |          ^^^^^^^^^

error: aborting due to previous error

